# polygon-rotation

./: compile_commands.json  makefile
include/: PolygonRotation.h
presentation/: PolygonRotation.deck  PolygonRotation.pptx  presentation_notes.md
src/: PolygonRotation.cpp  main.cpp
testing/: graph.ipynb  hydra0_4192026.csv  pyproject.toml  test.py  ubuntu_4192026.csv  wsl_4192026.csv
testing/data/: hydra0_4192026.csv  ubuntu_4192026.csv  windows_4192026.csv  wsl_4192026.csv
